connecting the UI to the backend. the code is still markedly cleaner, despite that.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-logging.level.fm.bootifulpodcast=info 
-logging.level.root=off
+#logging.level.fm.bootifulpodcast=info
+#logging.level.root=off
 podcast.api.url=https://bootiful-podcast-api.cfapps.io
 spring.main.banner-mode=off
